--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -25,6 +25,9 @@
             <p>
         <strong>User story:</strong>
         <%= @task.user_story.description %>
+
+        <strong>User:</strong>
+        <%= @task.priority_id %>
       </p>
       
  </div>
