--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,8 +12,9 @@
             <% end %>
           </div>
           </div>
-       <% end%>
-       
+       <% end %>
+
+    
               <div>
                 <%= f.label :title %>
                 <br />
@@ -36,15 +37,15 @@
         
               <div>               
                 <br />
-                <%= f.label :user_story_id  %>
+                <%= f.label :user_story_id %>
                 <br />
                 <%= f.collection_select(:user_story_id, current_project.user_stories, :id, :title,  { prompt: 'Selecionar user story' } ) %>
               
               </div>
         
-            <div>
+              <div>
                 <br />
-                <%= f.label :kind_id%>
+                <%= f.label :kind_id %>
                 <br />
                 <%= f.select :kind_id, Kind.all.collect {|x| [x.name, x.id]}, { prompt: 'Selecionar o tipo de tarefa' } %>
               </div>
@@ -60,14 +61,17 @@
                 <br />
                 <b> Atribuir para:</b>
                 <br />
-                <%= f.select :function_user_projects_id, FunctionUserProject.all.collect {|x| [ "#{x.user.name}" " - ""#{x.user.email}" ,  x.user.id]}, { prompt: 'Selecionar um responsável' } %>
+                <%= f.select :function_user_projects_id, FunctionUserProject.all.collect {|x| ["#{x.user.name}"' - '"#{x.user.email}",  x.id]}, { prompt: 'Selecionar um responsável' } %>
               </div>
-              <br />              
-              <div>
-         
+              <br />
+
+               <%= f.hidden_field :user_id, :value => current_user.id %>       
+         <div> 
             <%= link_to 'Salvar', new_task_path({controller: 'task', action: 'create'}), class: 'save blue_button' %>
             <%= link_to 'Cancelar', user_stories_path, class: 'red_button' %>
-        </div>
+            <br />
+            <br />
+         </div>
       <% end %>
     </div>
 
